--- a/Palu_sentinelles.Rmd
+++ b/Palu_sentinelles.Rmd
@@ -39,7 +39,7 @@ for ( k in 2:6 )
 #select last 07 seven weeks for each disease:
 
 #Malaria selection for last 6 weeks before current week:
-malaria=mydata[as.Date(deb_sem) %in% semaine,list(deb_sem,sites,malaria_cases)]
+malaria=unique(mydata[as.Date(deb_sem) %in% semaine,list(deb_sem,sites,malaria_cases)])
 
 #transform NA
 malaria$malaria_cases=as.character(malaria$malaria_cases)
@@ -47,35 +47,37 @@ malaria[is.na(malaria_cases)==T,malaria_cases:="na"]
 malaria[,malaria_cases:=ifelse(nchar(malaria_cases)<2,paste0("0",malaria_cases),
                                malaria_cases)]
 #looking for missing sites for each semaine:
-tmp=malaria[,.N,by="deb_sem"]
-#max_eff_site= max(tmp$N)
-#max_semaine = tmp[N==max(N),get("deb_sem")] #maka semaine arbitraire
+#tmp=malaria[,.N,by="deb_sem"]
+
+
 #get unique sites for max
 liste_sites= unique(malaria$sites)
 for ( s in unique(malaria$deb_sem) ) #foreach unique semaine
 { 
    #if not all sites in the current week in the total liste
-    currentsiteweek= malaria[deb_sem == s,get('sites')]
+    currentsiteweek= malaria[as.Date(deb_sem) == as.Date(s),get('sites')]
     if (  all (liste_sites %in% currentsiteweek   )==F )
     {
       missing_site=liste_sites[which(!(liste_sites %in%  currentsiteweek))]
     for ( p in missing_site)
       {
-      #cat(p," is missing for semaine:",s,"\n")
-      tmp1 = data.table(deb_sem=s,sites=p,malaria_cases="na")
+      #cat(p," is missing for semaine (malaria):",as.Date(s),"\n")
+      tmp1 = data.table(deb_sem=as.Date(s),sites=p,malaria_cases="na")
       malaria=rbind(malaria,tmp1)
       rm(tmp1)
       }
     }
-    
-    
 }
 setorder(malaria,deb_sem,sites)
-#
+
+#keep unique obs.
+#malaria=unique(malaria)
+
 #inline historical occurence:
 malaria[,vals:=paste(malaria_cases,collapse = "-"),by="sites"]
 #append latest week per site:
 malaria[,malaria_cases:=NULL]
+
 lastweek = unique(mydata[as.Date(deb_sem)==max_deb_sem-7,list(sites,malaria_cases)])
 lastweek[,malaria_cases:=as.character(malaria_cases)]
 lastweek[is.na(malaria_cases)==T,malaria_cases:="na"]
@@ -88,32 +90,32 @@ malaria=merge(malaria,sentinel_latlong[,list(sites,name)],
 setnames(malaria,c("name","vals","malaria_cases"),
                  c("Sites","6 semaines précédentes","Semaine dernière"))
 
-
+##################################################################################
 
 #Fiever selection for last 6 weeks before current week:
 fievre=mydata[as.Date(deb_sem) %in% semaine,list(deb_sem,sites,SyndF)]
-
+fievre=fievre[,SyndF:=sum(SyndF,na.rm = T),by="deb_sem,sites"]
+fievre=unique(fievre)
 #transform NA into XX
 fievre$SyndF=as.character(fievre$SyndF)
 fievre[is.na(SyndF)==T,SyndF:="na"]
 fievre[,SyndF:=ifelse(nchar(SyndF)<2,paste0("0",SyndF),SyndF)]
 #looking for missing sites for each semaine:
-#tmp=fievre[,.N,by="deb_sem"]
-#max_eff_site= max(tmp$N)
-#max_semaine = tmp[N==max(N),get("deb_sem")] #maka semaine arbitraire
+
 #get unique sites for max
 liste_sites= unique(fievre$sites)
 for ( s in unique(fievre$deb_sem) ) #foreach unique semaine
 { 
-  currentsiteweek= fievre[deb_sem == s,get('sites')]
+  currentsiteweek= fievre[as.Date(deb_sem) == as.Date(s),get('sites')]
     if (  all ( liste_sites %in% currentsiteweek   )==F )
     {
       missing_site=liste_sites[which(!(liste_sites %in%  currentsiteweek))]
     for ( p in missing_site)
       {
-      #cat(p," is missing for semaine:",s,"\n")
-      tmp1 = data.table(deb_sem=s,sites=p,SyndF="na")
+      #cat(p," is missing for semaine(fiever):",s,"\n")
+      tmp1 = data.table(deb_sem=as.Date(s),sites=p,SyndF="na")
       fievre=rbind(fievre,tmp1)
+     
       rm(tmp1)
       }
     }
@@ -123,9 +125,14 @@ setorder(fievre,deb_sem,sites)
 
 #inline historical occurence:
 fievre[,vals:=paste(SyndF,collapse = "-"),by="sites"]
+#fievre = unique(fievre[,list(sites,vals)])
+#knitr::kable(fievre)
 #append latest week per site:
 fievre[,SyndF:=NULL]
 lastweek= unique(mydata[as.Date(deb_sem)==max_deb_sem-7, list(sites,SyndF)])
+lastweek[,SyndF:=sum(SyndF),by="sites"]
+lastweek=unique(lastweek)
+
 lastweek[,SyndF:=as.character(SyndF)]
 lastweek[is.na(SyndF)==T,SyndF:="na"]                           
 fievre= merge(unique(fievre[,list(sites,vals)]),
@@ -138,11 +145,11 @@ setnames(fievre,c("name","vals","SyndF"),
                 c("Sites","6 semaines précédentes","Semaine dernière"))
 
 #generate tables:
-knitr::kable(fievre[,c("Sites","6 semaines précédentes","Semaine dernière"),with=F],
-             caption="Fièvres dans le réseau sentinel")
+    knitr::kable(fievre[,c("Sites","6 semaines précédentes","Semaine dernière"),with=F],
+                caption="Fièvres dans le réseau sentinel")
 
-knitr::kable(malaria[,c("Sites","6 semaines précédentes","Semaine dernière"),with=F],
-             caption="Paludisme dans le réseau sentinel")
+  knitr::kable(malaria[,c("Sites","6 semaines précédentes","Semaine dernière"),with=F],
+              caption="Paludisme dans le réseau sentinel")
 ```
 
 ```{r,echo=F, fig.show = "hold" ,out.width = '50%', out.extra='',comment='', message=FALSE , warning=FALSE}
