--- a/Palu_sentinelles.Rmd
+++ b/Palu_sentinelles.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Surveillance Fièvres et Paludisme dans le réseau sentinelle"
 author: "Institut Pasteur de Madagascar"
-date: "`r format(Sys.time(), '%d %B, %Y')`"
+date: "`r Sys.Date()`"
 output: pdf_document
 ---
 
