--- a/report/Palu_sentinelles.Rmd
+++ b/report/Palu_sentinelles.Rmd
@@ -8,12 +8,13 @@ output: pdf_document
 
 
 ```{r,echo=F, fig.width=10, out.extra='',comment='', message=FALSE , warning=FALSE}
+setwd("/media/herimanitra/DONNEES/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
 #load source code:
-source("import_data.R");source("tdrplus.R");require(ggplot2); require(gridExtra)
-source("var_conversion.R")
+source("./import_data.R");source("./tdrplus.R");require(ggplot2); require(gridExtra)
+source("./var_conversion.R")
 mydata= tdr_malaria(htc=F)
 
-source("reporting_plot.R",local = T)
+source("./reporting_plot.R",local = T)
 generate_plot(htc="all",
               mydata=mydata,
               add_trend=T,
@@ -28,6 +29,7 @@ generate_plot(htc="all",
 
 
 ```{r,echo=F,out.extra='',comment='', message=FALSE , warning=FALSE}
+setwd("/media/herimanitra/DONNEES/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
 mydata= tdr_malaria(htc=F)
 semaine=array()
 max_deb_sem=max(as.Date(mydata$deb_sem))
@@ -49,7 +51,6 @@ malaria[is.na(malaria_cases)==T,malaria_cases:="na"]
 malaria[,malaria_cases:=ifelse(nchar(malaria_cases)<2,paste0("0",malaria_cases),
                                malaria_cases)]
 #looking for missing sites for each semaine:
-#tmp=malaria[,.N,by="deb_sem"]
 
 
 #get unique sites for max
@@ -74,7 +75,6 @@ for ( s in unique(malaria$deb_sem) ) #foreach unique semaine
 setorder(malaria,deb_sem,sites)
 
 #keep unique obs.
-#malaria=unique(malaria)
 
 #inline historical occurence:
 malaria[,vals:=paste(malaria_cases,collapse = "-"),by="sites"]
@@ -128,8 +128,7 @@ setorder(fievre,deb_sem,sites)
 
 #inline historical occurence:
 fievre[,vals:=paste(SyndF,collapse = "-"),by="sites"]
-#fievre = unique(fievre[,list(sites,vals)])
-#knitr::kable(fievre)
+
 #append latest week per site:
 fievre[,SyndF:=NULL]
 lastweek= unique(mydata[as.Date(deb_sem)==max_deb_sem-7, list(sites,SyndF)])
@@ -156,8 +155,7 @@ setnames(fievre,c("name","vals","SyndF"),
 ```
 
 ```{r,echo=F, fig.show = "hold" ,out.width = '50%', out.extra='',comment='', message=FALSE , warning=FALSE}
-
-
+setwd("/media/herimanitra/DONNEES/IPM_sentinelle/sentinel_hrmntr 291115/Sentinel")
 #merge with sentinel_latlong:
 mydata= tdr_malaria(htc=F)
 mydata=merge(mydata,sentinel_latlong, by.x="sites",by.y="sites")
