--- a/report/PFA_sentinelles.Rmd
+++ b/report/PFA_sentinelles.Rmd
@@ -16,7 +16,7 @@ mydata[,occurence:=sum(occurence,na.rm = T),by="code"]
 mydata$deb_sem=as.Date(mydata$deb_sem)
 mydata[,weeks:=week(deb_sem)]
 mydata=mydata[as.Date(deb_sem,origin="1970-01-01")>=as.Date("2015-06-01"),]
-d=ggplot(unique(mydata[,list(deb_sem,occurence)]), aes(x=deb_sem, y=occurence),
+d=ggplot(unique(mydata[,list(deb_sem,occurence)],by=NULL), aes(x=deb_sem, y=occurence),
          fill=occurence) 
 d= d + geom_bar(stat = "identity",fill="blue") 
 d= d + ggtitle(label="PFA dans le réseau sentinelle")
@@ -58,10 +58,11 @@ X[,occurence:=ifelse(nchar(occurence)<2,paste0("0",occurence),occurence)]
 X[,vals:=paste(occurence,collapse = "-"),by="sites"]
 #append latest week per site:
 X[,occurence:=NULL]
-lastweek=unique(mydata[as.Date(deb_sem)==max_deb_sem-7,list(sites,occurence)])
+lastweek=unique(mydata[as.Date(deb_sem)==max_deb_sem-7,list(sites,occurence)],
+                by=NULL)
 lastweek[,occurence:=as.character(occurence)]
 lastweek[is.na(occurence)==T,occurence:="na"]                             
-X= merge(unique(X[,list(sites,vals)]),lastweek,by.x="sites", by.y="sites")
+X= merge(unique(X[,list(sites,vals)],by=NULL),lastweek,by.x="sites", by.y="sites")
               
                
 X= merge(X,sentinel_latlong[,list(name,sites)],by.x="sites",by.y="sites")
